--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,14 @@ add_executable(lab2.2 lab2/zad2.cpp)
 add_executable(lab3.1 lab3/zad1.cpp)
 add_executable(lab3.2 lab3/zad2.cpp)
 add_executable(lab3.3 lab3/zad3.cpp)
+add_executable(lab3.4 lab3/zad4.cpp)
+add_executable(lab3.5 lab3/zad5.cpp)
+add_executable(lab3.6 lab3/zad6.cpp)
+add_executable(lab3.7 lab3/zad7.cpp)
+add_executable(lab3.8 lab3/zad8.cpp)
+add_executable(lab3.9 lab3/zad9.cpp)
+add_executable(lab3.10 lab3/zad10.cpp)
+add_executable(lab3.11 lab3/zad11.cpp)
 
 
 add_executable(kolok1 kval_kolok/zad1.cpp)
