--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,8 @@ add_executable(lab6.7 lab6/zad7.cpp)
 add_executable(lab6.8 lab6/zad8.cpp)
 add_executable(lab6.9 lab6/zad9.cpp)
 
+add_executable(lab7.1 lab7/zad1.cpp)
+
 add_executable(q1 kvalifikaciski/zad1.cpp)
 add_executable(q2 kvalifikaciski/zad2.cpp)
 add_executable(q3 kvalifikaciski/zad3.cpp)
