--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,8 @@ add_executable(lab8.9 lab8/zad9.cpp)
 
 add_executable(lab9.1 lab9/zad1.cpp)
 add_executable(lab9.2 lab9/zad2.cpp)
-
-
+add_executable(lab9.3 lab9/zad3.cpp)
+add_executable(lab9.4 lab9/zad4.cpp)
 
 
 
