--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,8 @@ add_executable(kk3 kolok1/k3.cpp)
 
 add_executable(kolok2 kolok2/zad1.cpp)
 add_executable(kolok2.2 kolok2/zad2.cpp)
+add_executable(kolok2.4 kolok2/zad4.cpp)
+add_executable(kolok2.5 kolok2/zad5.cpp)
 
 
 
